web-infras/parser/tests/fixtures/babel/es2015/class-methods/getter-signature/output.txt
[SyntaxError]: getter functions must have no arguments (2,7)
2|  get prop (arg) {}
 |     ^
